--- a/app/views/deals/all_deals.html.erb
+++ b/app/views/deals/all_deals.html.erb
@@ -1,63 +1,87 @@
  <div class="layout"><!--layout-->
- <div class="wrap">   
-  <%= render 'shared/header_short' %>
+  <div class="wrap">   
+    <%= render 'shared/header_short' %>
+    <div class="deals_main_menu clearfix"><ul><li class="nth_1"><a href="">All Deals</a></li></ul></div>
 
-  <div class="deals_main_menu clearfix">
-    <ul>
-      <li class="nth_1"><a href="">All Deals <!-- <span>|</span> --> </a></li>
-      <!-- <li class="nth_2"><a href="">Discover more deals</a></li> -->
-    </ul>    
-  </div>
-  
-  <div class="all_wrap">
+    <div class="alldeals_tabs">
+      <input type="radio" name="tab" id="tab1" checked="checked">
+      <label for="tab1">Home</label>
+      <input type="radio" name="tab" id="tab2">
+      <label for="tab2">Portfolio</label>
+      <input type="radio" name="tab" id="tab3">
+      <label for="tab3">Archives</label>
+      <input type="radio" name="tab" id="tab4">
+      <label for="tab4">Contact</label>
+    
+      <div class="tab-content-wrapper">
+        <div id="tab-content-1" class="tab-content">
+          <div class="all_wrap">
+            <div class="all_promocodes">
+              <h2>오늘의 아마존 할인 코드</h2>
+              <% @promocodes.each do |promocode| %>
+                <p><%= promocode.p_title %></p>
+                <% if promocode.p_spare_03.present? %>
+                  <p>Avg <%= promocode.p_spare_03 %> rates | <%= number_with_delimiter(promocode.p_spare_04) %>+ reviews </p>
+                <% end %>
+                <% running_total = 0 %>
+                <% running_total =  promocode.p_spare_26 - (promocode.p_spare_27 / 100) * promocode.p_spare_26 %>
+                <p class="h_price"><%= number_to_currency(running_total) %> <span class="span_01">( Was: <%= number_to_currency(promocode.p_spare_26) %></span><span class="span_02"> | <%= number_to_percentage(promocode.p_spare_27, precision: 0) %> OFF with Promo Code [ <%= promocode.p_promocode %> ])</span></p>
+                <a target="_blank" href="<%= promocode.p_link %>">[ 할인코드 사용하기 ]</a><br /><br />        
+                <% end %>
+              <em>더 많은 아마존 할인코드는 <a target="_blank" href="/promocodes">www.ohigottabuythis.net/promocodes</a></em>
+            </div>
+            <hr>
+            <div class="all_hotdeals">
+              <h2>오늘의 아마존 핫딜</h2>
+                <% @hotdeals.each do |hotdeal| %>
+                  <p><%= hotdeal.h_title %></p>
+                  <% if hotdeal.h_spare_08.present? %>
+                    <p>Avg <%= hotdeal.h_spare_08 %> rates | <%= number_with_delimiter(hotdeal.h_spare_09) %>+ reviews </p>
+                  <% end %>
+                  <p><%= number_to_currency(hotdeal.h_spare_41) %> (Was: <%= number_to_currency(hotdeal.h_spare_42) %> | <%= 
+                  number_to_percentage(hotdeal.h_percentage, precision: 0) %> OFF)</p>
+                  <a target="_blank" href="<%= hotdeal.h_link %>">[ 핫딜 바로가기 ]</a><br /><br />
+                <% end %>
+              <span>더 많은 아마존 핫딜은 <a target="_blank" href="/hotdeals">www.ohigottabuythis.net/hotdeals</a></span>
+            </div>
+          </div><!--./all_wrap-->
+        </div><!--#/tab-content-1-->
 
-    <div class="all_promocodes">
-      <h2>오늘의 아마존 할인 코드</h2>
-        <% @promocodes.each do |promocode| %>
-          <p><%= promocode.p_title %></p>
-          <% if promocode.p_spare_03.present? %>
-            <p>Avg <%= promocode.p_spare_03 %> rates | <%= number_with_delimiter(promocode.p_spare_04) %>+ reviews </p>
-          <% end %>
-          <% running_total = 0 %>
-          <% running_total =  promocode.p_spare_26 - (promocode.p_spare_27 / 100) * promocode.p_spare_26 %>
-          <p class="h_price"><%= number_to_currency(running_total) %> <span class="span_01">( Was: <%= number_to_currency(promocode.p_spare_26) %></span><span class="span_02"> | <%= number_to_percentage(promocode.p_spare_27, precision: 0) %> OFF with Promo Code [ <%= promocode.p_promocode %> ])</span></p>
-                
-          <a target="_blank" href="<%= promocode.p_link %>">[ 할인코드 사용하기 ]</a><br /><br />        
-        <% end %>
-      <em>더 많은 아마존 할인코드는 <a target="_blank" href="/promocodes">www.ohigottabuythis.net/promocodes</a></em>
-    </div>
-
-    <hr>
-
-    <div class="all_hotdeals">
-      <h2>오늘의 아마존 핫딜</h2>
-        <% @hotdeals.each do |hotdeal| %>
-          <p><%= hotdeal.h_title %></p>
-          <% if hotdeal.h_spare_08.present? %>
-            <p>Avg <%= hotdeal.h_spare_08 %> rates | <%= number_with_delimiter(hotdeal.h_spare_09) %>+ reviews </p>
-          <% end %>
-          <p><%= number_to_currency(hotdeal.h_spare_41) %> (Was: <%= number_to_currency(hotdeal.h_spare_42) %> | <%= 
-          number_to_percentage(hotdeal.h_percentage, precision: 0) %> OFF)</p>
-          <a target="_blank" href="<%= hotdeal.h_link %>">[ 핫딜 바로가기 ]</a><br /><br />
-        <% end %>
-      <span>더 많은 아마존 핫딜은 <a target="_blank" href="/hotdeals">www.ohigottabuythis.net/hotdeals</a></span>
-    </div>
-
-  </div>
-
-
- <!--  <div class="for_sns">
-    <% @hotdeals.each do |hotdeal| %>
-      <div class="wrapping">
-       <div class="image"><img src="<%= hotdeal.h_image %>"></div>
-       <div class="title"><p><%= hotdeal.h_title %></p></div>
-       <div class="info">
-        <p>$145.99 <em>$200.00</em><span>(40% OFF)</span></p>
-        <p>$200이하 무관세 | 직배송 가능</p>
-       </div>
+        <div id="tab-content-2" class="tab-content">
+          
+          
+        </div>
+        <div id="tab-content-3" class="tab-content">
+          
+          
+        </div>
+        <div id="tab-content-4" class="tab-content">
+          
+         
+        </div>
       </div>
-    <% end %>
-  </div> -->
+    </div>
+
+
+
+    
+      
+
+
+   <!--  <div class="for_sns">
+      <% @hotdeals.each do |hotdeal| %>
+        <div class="wrapping">
+         <div class="image"><img src="<%= hotdeal.h_image %>"></div>
+         <div class="title"><p><%= hotdeal.h_title %></p></div>
+         <div class="info">
+          <p>$145.99 <em>$200.00</em><span>(40% OFF)</span></p>
+          <p>$200이하 무관세 | 직배송 가능</p>
+         </div>
+        </div>
+      <% end %>
+    </div> -->
+
+
 
 
 
@@ -66,3 +90,6 @@
 
 
 
+<script type="text/javascript">
+
+</script>
