--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -35,7 +35,7 @@
   .codes .lt_cnt .most_hotdeal .numbering{background:#000;color:#fff;text-align:center;width:20%;border-radius:7px;position:absolute;top:0;left:0;}
   .codes .lt_cnt .most_hotdeal{padding:10px 0;border-bottom:1px solid #ccc;}
   .codes .lt_cnt .most_hotdeal .image{float:left;width:39%;margin-right:1%;position:relative;}
-  .codes .lt_cnt .most_hotdeal .image img{width:100%;}
+  .codes .lt_cnt .most_hotdeal .image img{width:100%;height:100px;object-fit:contain;}
   .codes .lt_cnt .most_hotdeal .inner{float:left;width:59%;margin-left:1%;padding:0 7px 5px 0;}
   .codes .lt_cnt .most_hotdeal .inner p{font-size:12px;line-height:1.4;height:4.2em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-all;-webkit-box-orient:vertical;-webkit-line-clamp:3}
   .codes .lt_cnt .most_hotdeal .inner p a{text-decoration:none;color:#000;}
@@ -672,6 +672,11 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .all_wrap{}
 .all_wrap .all_hotdeals, .all_wrap .all_promocodes{margin:0 1% 20px 1%;}
 .all_wrap .all_hotdeals span, .all_wrap .all_promocodes em{margin-top:20px;display:block;}
+.all_box{border-bottom:1px solid #ccc;padding:5px;margin-bottom:10px;}
+.all_wrap .image_wrap{float:left;width:15%;}
+.all_wrap .image_wrap .img{position:relative;height:100px;}
+.all_wrap .image_wrap .img img{width:100px;height:100px;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);}
+.all_wrap .inner{float:left;width:82%;margin-left:3%;}
 
 /* Tab Menu */
 
