--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -125,7 +125,8 @@
 .show_wrap{margin-top:70px;}
 .show_wrap .show_box{width:1000px;margin:0 auto;font-family: 'Montserrat', sans-serif;font-weight:100;box-shadow:0px 13px 40px -24px rgba(0,0,0,0.15)}
 .show_wrap .show_box .show_img{float:left;width:44%;margin:5% 2%;position:relative;}
-.show_wrap .show_box .show_img img{width:80%;}
+.show_wrap .show_box .show_img .img_box{height:350px;position:relative;}
+.show_wrap .show_box .show_img .img_box img{width:100%;height:100%;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);object-fit:contain;}
 .show_wrap .show_box .show_img button img{width:40px;position:absolute;left:5px;top:5px;}
 .show_wrap .show_box .show_inner{float:left;width:48%;margin: 4% 0 10% 2%;}
 .show_wrap .show_box .show_inner h2{font-size:30px;}
