--- a/app/views/deals/all_deals.html.erb
+++ b/app/views/deals/all_deals.html.erb
@@ -5,9 +5,9 @@
 
     <div class="alldeals_tabs">
       <input type="radio" name="tab" id="tab1" checked="checked">
-      <label for="tab1">Home</label>
+      <label for="tab1">Amazon Hodeals(KOR)</label>
       <input type="radio" name="tab" id="tab2">
-      <label for="tab2">Portfolio</label>
+      <label for="tab2">Amazon Hodeals(ENG)</label>
       <input type="radio" name="tab" id="tab3">
       <label for="tab3">Archives</label>
       <input type="radio" name="tab" id="tab4">
@@ -48,25 +48,49 @@
         </div><!--#/tab-content-1-->
 
         <div id="tab-content-2" class="tab-content">
-          
-          
-        </div>
+          <div class="all_wrap">
+            <div class="all_promocodes">
+              <h2>Today's Promo Codes On Amazon</h2>
+              <% @promocodes.each do |promocode| %>
+                <div class="all_box clearfix">
+                  <div class="image_wrap"><div class="img"><img src="<%= promocode.p_image %>"></div></div>
+                  <div class="inner">
+                    <p><%= promocode.p_title %></p>
+                    <% if promocode.p_spare_03.present? %>
+                      <p>Avg <%= promocode.p_spare_03 %> rates | <%= number_with_delimiter(promocode.p_spare_04) %>+ reviews </p>
+                    <% end %>
+                    <% running_total = 0 %>
+                    <% running_total =  promocode.p_spare_26 - (promocode.p_spare_27 / 100) * promocode.p_spare_26 %>
+                    <p class="h_price"><%= number_to_currency(running_total) %> <span class="span_01">( Was: <%= number_to_currency(promocode.p_spare_26) %></span><span class="span_02"> | <%= number_to_percentage(promocode.p_spare_27, precision: 0) %> OFF with Promo Code [ <%= promocode.p_promocode %> ])</span></p>
+                    <a target="_blank" href="<%= promocode.p_link %>">[ Use Promo Code ]</a> <%= promocode.p_link %><br /><br />  
+                  </div> 
+                 </div>     
+                <% end %>
+              <em>더 많은 아마존 할인코드는 <a target="_blank" href="/promocodes">www.ohigottabuythis.net/promocodes</a></em>
+            </div>
+            <hr>
+            <div class="all_hotdeals">
+              <h2>Today's Bargain On Amazon</h2>
+                <% @hotdeals.each do |hotdeal| %>
+                  <p><%= hotdeal.h_title %></p>
+                  <% if hotdeal.h_spare_08.present? %>
+                    <p>Avg <%= hotdeal.h_spare_08 %> rates | <%= number_with_delimiter(hotdeal.h_spare_09) %>+ reviews </p>
+                  <% end %>
+                  <p><%= number_to_currency(hotdeal.h_spare_41) %> (Was: <%= number_to_currency(hotdeal.h_spare_42) %> | <%= 
+                  number_to_percentage(hotdeal.h_percentage, precision: 0) %> OFF)</p>
+                  <a target="_blank" href="<%= hotdeal.h_link %>">[ Take Deals ]</a><br /><br />
+                <% end %>
+              <span>더 많은 아마존 핫딜은 <a target="_blank" href="/hotdeals">www.ohigottabuythis.net/hotdeals</a></span>
+            </div>
+          </div><!--./all_wrap-->
+        </div><!--#/tab-content-2-->
+
         <div id="tab-content-3" class="tab-content">
-          
-          
         </div>
         <div id="tab-content-4" class="tab-content">
-          
-         
         </div>
       </div>
     </div>
-
-
-
-    
-      
-
 
    <!--  <div class="for_sns">
       <% @hotdeals.each do |hotdeal| %>
