--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -11,11 +11,13 @@
         
         <!-- <p>Location Map</p> -->
         <div class="show_img hotdeal_img">
-          <% if @promocode.p_image.present? %>
-           <a target="_blank" href="<%= @promocode.p_link %>"><img src="<%= @promocode.p_image %>" alt="<%= @promocode.p_title %>" title="<%= @promocode.p_image_title %>"></a>
-          <% else %>
-           <%= link_to (image_tag @promocode.pimage.url(:small), alt: @promocode.p_title, title: @promocode.p_image_title), @promocode %>
-          <% end %>
+          <div class="img_box">
+            <% if @promocode.p_image.present? %>
+             <a target="_blank" href="<%= @promocode.p_link %>"><img src="<%= @promocode.p_image %>" alt="<%= @promocode.p_title %>" title="<%= @promocode.p_image_title %>"></a>
+            <% else %>
+             <%= link_to (image_tag @promocode.pimage.url(:small), alt: @promocode.p_title, title: @promocode.p_image_title), @promocode %>
+            <% end %>
+          </div>
           <div class="mark"><span>HOT</span><em>DEALS</em></div>
            <% if can? :update, @promocode %>
             <div class="admin">
