--- a/app/views/promocodes/_promocode.html.erb
+++ b/app/views/promocodes/_promocode.html.erb
@@ -10,7 +10,7 @@
         <%= link_to (image_tag promocode.pimage.url(:small), alt: promocode.p_title, title: promocode.p_image_title), promocode %>
       <% end %>
     </div>
-    <div class="mark mark_expried"><p>EXPIRED</p></div>
+    <div class="expried_wrap"><div class="mark mark_expried"><p>EXPIRED</p></div></div>
    </div>
   <% else %>
    <div class="image_box">
