--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -127,7 +127,7 @@
 .show_wrap .show_box .show_img{float:left;width:44%;margin:5% 2%;position:relative;}
 .show_wrap .show_box .show_img .img_box{height:350px;position:relative;}
 .show_wrap .show_box .show_img .img_box img{width:100%;height:100%;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);object-fit:contain;}
-.show_wrap .show_box .show_img button img{width:40px;position:absolute;left:5px;top:5px;}
+.show_wrap .show_box .show_img button img{width:40px;position:absolute;top:0;left:0;}
 .show_wrap .show_box .show_inner{float:left;width:48%;margin: 4% 0 10% 2%;}
 .show_wrap .show_box .show_inner h2{font-size:30px;}
 .show_wrap .show_box .show_inner h2 a{text-decoration:none;color:#000;background:none;padding:0;line-height:1.1;}
