--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -103,7 +103,7 @@
 .deals_card .image_box .mark em{display:block;letter-spacing:3.1px;}
 .deals_card .image_box .mark_expried{width:70px;height:42px;background:#ff0000;}
 .deals_card .image_box .mark_expried p{margin-top:6px;font-size:11px;}
-.deals_card .image_box .expried{-webkit-filter: grayscale(100%);filter: gray;}
+.deals_card .image_box .expried{-webkit-filter: grayscale(100%);filter: gray;height:100%;}
 .deals_card img{width:100%;height:100%;position:relative;object-fit:contain;}
 .deals_card .buy-now{z-index:100;position:absolute;top:0;right:0;padding:0px 15px;color:#fff;font-weight:700;font-size:20px;opacity:0;background-color:#000;-webkit-transform:rotateX(-90deg);transform:rotateX(-90deg);-webkit-transform-origin:100% 0;-ms-transform-origin:100% 0;transform-origin:100% 0;}
 .deals_card .buy-now span{}
@@ -142,6 +142,8 @@
   .deals_card{width:48%;}
   .deals_card .buy-now{display:none;}
   .deals_card .image_box{height:200px;padding:0;}
+  .deals_card .image_box .expried_wrap .mark_expried{width:55px;height:30px;}
+  .deals_card .image_box .mark_expried p{font-size:10px;font-weight:bold;}
   .deals_card .image_box .mark{font-size:11px;font-weight:600;width:40px;padding:3px;}
   .deals_card h3{font-size:14px;}
   .deals_card p{font-size:13px;line-height:1.2;height:3.6em;}
