--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -10,10 +10,8 @@
             <a target="_blank" href="<%= @gadget.gg_url %>"><img src="<%= @gadget.gg_img %>" alt="<%=@gadget.gg_title %>" title="<%= @gadget.gg_spare_05 %>"></a>
           </div>
           <% if @gadget.gg_youtube01.present? %>
-              <div class="js-overlay-start start" data-url= "<%= @gadget.gg_youtube01 %>">
-                <button><img src="<%=asset_path 'youtube_02.png' %>" alt="Play Youtube" /></button>
-              </div>
-            <% end %>
+            <div class="js-overlay-start start" data-url= "<%= @gadget.gg_youtube01 %>"><button><img src="<%=asset_path 'youtube_02.png' %>" alt="Play Youtube" /></button></div>
+          <% end %>
           <% if can? :update, @gadget %>
             <h3>Admin Management</h3>
             <p><%= @gadget.gg_title %></p>
