--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -40,6 +40,7 @@
   .codes .lt_cnt .most_hotdeal .inner p{font-size:12px;line-height:1.4;height:4.2em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-all;-webkit-box-orient:vertical;-webkit-line-clamp:3}
   .codes .lt_cnt .most_hotdeal .inner p a{text-decoration:none;color:#000;}
   .codes .lt_cnt .most_hotdeal .inner p.expired{font-size:11px;color:#ff0000;}
+  .codes .lt_cnt .most_hotdeal .inner p.endtoday{font-size:11px;color:#ffa500;}
   .codes .lt_cnt .most_hotdeal .inner em{font-size:20px;}
   .codes .lt_cnt .most_hotdeal .inner em span{font-size:15px;text-decoration:line-through;color:#616161;font-size:15px;margin-right:7px;}
 
@@ -145,6 +146,7 @@
   .codes .card_wrap .card .inner>.code_high>p>span{position:relative;top:0.4em;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;font-weight:500;}
   .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:13px;color:#616161;margin-bottom:3px;}
+  .codes .card_wrap .card .inner>.code_high>.endtoday{color:#ffa500;}
   .codes .card_wrap .card .inner>.code_high>ul{}
   .codes .card_wrap .card .inner>.code_high>ul>li{margin-bottom:10px;}
   .codes .card_wrap .card .inner>.code_high>ul>li>p{font-size:17px;}
