--- a/app/views/promocodes/_promocode.html.erb
+++ b/app/views/promocodes/_promocode.html.erb
@@ -1,7 +1,7 @@
 <!-- < @promocodes.each do |promocode| > -->
 <figure class="deals_card">
   <% if promocode.p_spare_50 && (promocode.p_spare_50 < DateTime.now) %>
-  <% promocode.p_spare_50 %>
+   <% promocode.p_spare_50 %>
    <div class="image_box">
     <div class="expried">
       <% if promocode.p_image.present? %>
@@ -10,7 +10,7 @@
         <%= link_to (image_tag promocode.pimage.url(:small), alt: promocode.p_title, title: promocode.p_image_title), promocode %>
       <% end %>
     </div>
-    <div class="expried_wrap"><div class="mark mark_expried"><p>EXPIRED</p></div></div>
+    <div class="expried_wrap"><div class="mark term exprie"><p>EXPIRED</p></div></div>
    </div>
   <% else %>
    <div class="image_box">
@@ -19,7 +19,14 @@
     <% else %>
       <%= link_to (image_tag promocode.pimage.url(:small), alt: promocode.p_title, title: promocode.p_image_title), promocode %>
     <% end %>
-    <div class="mark"><span><%= number_to_percentage(promocode.p_spare_27, precision: 0) %></span><em>OFF</em></div>
+    <% if promocode.p_spare_51.present? %>
+      <% if promocode.p_spare_51 && (promocode.p_spare_51 <= DateTime.now) %>
+      <% promocode.p_spare_51 %>
+        <div class="expried_wrap"><div class="mark term endtoday"><p>Ends Today</p></div></div>
+      <% else %>
+        <div class="mark"><span><%= number_to_percentage(promocode.p_spare_27, precision: 0) %></span><em>OFF</em></div>
+      <% end %>
+    <% end %>
    </div>
   <% end %>
    
