--- a/app/views/storepromotions/_form.html.erb
+++ b/app/views/storepromotions/_form.html.erb
@@ -17,6 +17,7 @@
         <%= f.input :sp_end_date, input_html: { class: "promo_date" } %>        
       </div>
       <%= f.input :sp_spare_60, label: 'Expired Date' %>
+      <%= f.input :sp_spare_61, label: 'Ends Today' %>
     </div>
 
     <div class="form_btn"><%= f.button :submit %></div>
