--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -26,6 +26,7 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .extra_info em.extra_dh{color:#007600;}
 .show_wrap .show_box .show_inner .hotdeal_inner .extra_info em.save_money{color:#B12704;}
 .show_wrap .show_box .show_inner .hotdeal_inner .extra_info em.expired{color:#ff0000;}
+.show_wrap .show_box .show_inner .hotdeal_inner .extra_info em.endtoday{color:#ffa500;}
 .show_wrap .show_box .show_inner .hotdeal_inner .show_des{border-top:1px solid #ccc;border-bottom:1px solid #ccc;margin:10px 0 20px 0;}
 .show_wrap .show_box .show_inner .hotdeal_inner .description{font-size:15px;margin:15px 0;line-height:1.4;height:5.6em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:4}
 .show_wrap .show_box .show_inner .hotdeal_inner .trix{font-weight:100;border-top:1px solid #ccc;border-bottom:1px solid #ccc;margin-bottom:20px;padding:10px;}
@@ -101,8 +102,10 @@
 .deals_card .image_box .mark{position:absolute;top:0;left:0;background:#000;color:#fff;width:50px;padding:7px;line-height:1.1;font-size:13px;text-align:center;}
 .deals_card .image_box .mark span{letter-spacing:3.1px;}
 .deals_card .image_box .mark em{display:block;letter-spacing:3.1px;}
-.deals_card .image_box .mark_expried{width:70px;height:42px;background:#ff0000;}
-.deals_card .image_box .mark_expried p{margin-top:6px;font-size:11px;}
+.deals_card .image_box .term{width:70px;height:42px;/*background:#ff0000;*/}
+.deals_card .image_box .term p{margin-top:6px;font-size:10px;}
+.deals_card .image_box .exprie{background:#ff0000;}
+.deals_card .image_box .endtoday{background:#ffa500;width:80px;}
 .deals_card .image_box .expried{-webkit-filter: grayscale(100%);filter: gray;height:100%;}
 .deals_card img{width:100%;height:100%;position:relative;object-fit:contain;}
 .deals_card .buy-now{z-index:100;position:absolute;top:0;right:0;padding:0px 15px;color:#fff;font-weight:700;font-size:20px;opacity:0;background-color:#000;-webkit-transform:rotateX(-90deg);transform:rotateX(-90deg);-webkit-transform-origin:100% 0;-ms-transform-origin:100% 0;transform-origin:100% 0;}
