--- a/app/views/deals/_body_stores.html.erb
+++ b/app/views/deals/_body_stores.html.erb
@@ -5,16 +5,16 @@
       
       <h2>New Offers & Promotions</h2>
       <% @storepromotions.each do |promo| %>
-        <div class="st_box clearfix">
-          <div class="st_image"><a target="_blank" href="<%= promo.sp_link %>"><img src="<%= promo.sp_image %>" alt="<%= promo.sp_title %>" title="<%= promo.sp_store_name %>"></a></div>
+        <div class="st_box clearfix">          
+          <div class="st_image"><%= link_to image_tag(promo.sp_image, alt: promo.sp_title, title: promo.sp_store_name), promo %></div>
           <div class="inner">
             <p><em class="st_title"><%= promo.sp_store_name %></em> | Up to <%= number_to_percentage(promo.sp_percentage_01, precision: 0) %> OFF <% if can? :update, promo %> | <%= link_to 'Edit', edit_storepromotion_path(promo) %><% end %></p>
-            <span><a target="_blank" href="<%= promo.sp_link %>"><%= promo.sp_title %></a></span>
-            <% if promo.sp_promocode.present? %>
+            <span><%= link_to promo.sp_title, promo %></span>
+            <!-- < if promo.sp_promocode.present? >
               <div class="text_copied store_sti">
                 <div class="container"><div class="wrap"><div class="box"><p data-copy-text=""><%= promo.sp_promocode %></p></div></div></div>
               </div>
-            <% end %>
+            < end > -->
             <!-- <span><%= promo.sp_description %></span> -->
           </div>
         </div>
