--- a/app/views/promocodes/edit.html.erb
+++ b/app/views/promocodes/edit.html.erb
@@ -34,6 +34,7 @@
           <%= f.input :p_end_date, input_html: { class: "promo_date" }, label: 'End Date' %>
         </div>
         <%= f.input :p_spare_50, label: 'Expired Date' %><br />
+        <%= f.input :p_spare_51, label: 'Ends Today' %><br />
         <%= f.input :p_description, label: 'Description Of Product' %>
         <%= f.input :p_spare_36, as: :trix_editor, label: 'Description Of Product with TRIX' %> 
 
