--- a/app/views/storepromotions/index.html.erb
+++ b/app/views/storepromotions/index.html.erb
@@ -58,8 +58,13 @@
                       <% storepromotion.sp_spare_60 %>
                         <em class="expired code_em">* This Promo Code has EXPIRED.</em>
                       <% else %>
-                      <em class="code_em">* End Date: <%= storepromotion.sp_end_date %></em>
-                      <em class="code_em">* Pricing may change and deals can expire fast.</em>
+                        <% if storepromotion.sp_spare_61 && (storepromotion.sp_spare_61 <= DateTime.now) %>
+                        <% storepromotion.sp_spare_61 %>
+                          <em class="code_em endtoday">* This coupon expires today.</em>
+                        <% else %>
+                          <em class="code_em">* End Date: <%= storepromotion.sp_end_date %></em>
+                          <em class="code_em">* Pricing may change and deals can expire fast.</em>
+                        <% end %>
                       <% end %>
                     </em>
                   <% else %>
@@ -68,8 +73,13 @@
                       <% storepromotion.sp_spare_60 %>
                         <em class="expired code_em">* This offer has EXPIRED.</em>
                       <% else %>
-                       <em class="code_em">* End Date: <%= storepromotion.sp_end_date %></em>
-                       <em class="code_em">* Pricing may change and deals can expire fast.</em>
+                        <% if storepromotion.sp_spare_61 && (storepromotion.sp_spare_61 <= DateTime.now) %>
+                        <% storepromotion.sp_spare_61 %>
+                         <em class="code_em">* This offer expires today.</em>
+                        <% else %>
+                         <em class="code_em">* End Date: <%= storepromotion.sp_end_date %></em>
+                         <em class="code_em">* Pricing may change and deals can expire fast.</em>
+                        <% end %>
                       <% end %>
                     </em>
                   <% end %>
