--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -9,8 +9,9 @@
         
         <!-- <p>Location Map</p> -->
         <div class="show_img hotdeal_img">
-
-          <img src="<%= @storepromotion.sp_image %>"> 
+          <div class="img_box">
+            <img src="<%= @storepromotion.sp_image %>"> 
+          </div>
           <% if can? :update, @storepromotion %>
             <div class="admin">
               <%= link_to 'Back', storepromotions_path %> |
@@ -26,17 +27,20 @@
            <h2><%= @storepromotion.sp_title %></h2>
            <p class="sp_des"><%= @storepromotion.sp_description.html_safe %></p>
 
-
-
              <% if @storepromotion.sp_promocode.present? %>
                 <div class="extra_info">
                   <em>* Pricing may change and deals can expire fast.</em>
                   <em class="code_em">
                     <% if @storepromotion.sp_spare_60 < DateTime.now %>
                     <% @storepromotion.sp_spare_60 %>
-                      <em class="expired">This Promo Code has EXPIRED.</em>
+                      <em class="expired">* This Promo Code has EXPIRED.</em>
                     <% else %>
-                    * End Date: <%= @storepromotion.sp_end_date %>
+                      <% if @storepromotion.sp_spare_61 <= DateTime.now %>
+                      <% @storepromotion.sp_spare_61 %>
+                        <em class="endtoday">* This coupon expires today.</em>
+                      <% else %>
+                        * End Date: <%= @storepromotion.sp_end_date %> 
+                      <% end %>
                     <% end %>
                   </em>
                 </div> 
@@ -50,7 +54,12 @@
                   <% @storepromotion.sp_spare_60 %>
                     <em class="expired">This offer has EXPIRED.</em>
                   <% else %>
-                   * End Date: <%= @storepromotion.sp_end_date %>
+                   <% if @storepromotion.sp_spare_61 <= DateTime.now %>
+                    <% @storepromotion.sp_spare_61 %>
+                      <em class="endtoday">* This offer expires today.</em>
+                    <% else %>
+                      <em>* End Date: <%= @storepromotion.sp_end_date %></em>
+                    <% end %>
                   <% end %>
                 </div>
               <% end %>
