--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -78,15 +78,16 @@
               <% @promocode.p_spare_50 %>
                 <em class="expired">* This promo code has EXPIRED.</em>
               <% else %>
-               <% if @promocode.p_spare_51 <= DateTime.now %>
-               <% @promocode.p_spare_51 %>
-                
+
+                <% if @promocode.p_spare_51.present? %>
+                 <% if @promocode.p_spare_51 <= DateTime.now %>
+                 <% @promocode.p_spare_51 %>
                   <em class="endtoday">* This Promo Code expires today.</em> 
-                
-               <% else %>
-                <em>* Code End Date: <%= @promocode.p_end_date %> or while supplies last.</em>
-               <% end %>
-                 
+                  <% end %>
+                 <% else %>
+                  <em>* Code End Date: <%= @promocode.p_end_date %> or while supplies last.</em>
+                 <% end %> 
+               
               <% end %>
              <!-- </div> -->
             <% else %>
