--- a/app/views/storepromotions/index.html.erb
+++ b/app/views/storepromotions/index.html.erb
@@ -15,16 +15,20 @@
       <div class="sp_left">
         <div class="sp_menu">
           <div class="text show-more-height">
-            <ul>
-              <li><a href="/storepromotions/">All Stores</a></li>
+            <div class="store_search"><%= form_for "",url: storepromotions_path, role: "search", method: :get do %><%= text_field_tag :search, @search_term, placeholder: "Search..." %><% end %></div>
+            <button id='sort-button'>Sort By Alphabetically</button>
+            <ul><li><a href="/storepromotions/">All Stores</a></li></ul>
+            <ul id='sort'>
               <% Spcategory.all.each do |category| %>
                 <li><%= link_to category.name, storepromotions_path(spcategory: category.name) %></li>
               <% end %>
-              <% if can? :update, @storepromotions %>
-                <li class="admin"><%= link_to 'New Store', new_storepromotion_path %></li>
-                <li class="admin"><%= link_to "New Category", new_spcategory_path %></li>
-              <% end %>
             </ul>
+            <% if can? :update, @storepromotions %>
+             <ul>
+              <li class="admin"><%= link_to 'New Store', new_storepromotion_path %></li>
+              <li class="admin"><%= link_to "New Category", new_spcategory_path %></li>
+             </ul>
+            <% end %>
             <!-- Only in navbar
             <% Spcategory.where(display_in_navbar: true).each do |category| %>
               <%= link_to category.name, storepromotions_path(spcategory: category.name) %>
@@ -106,8 +110,6 @@
   </div><!--./warp-->
 </div><!--./layout-->
 <script><%= render(:partial => 'storepromotions', :handlers => [:erb], :formats => [:js]) %></script>
-
-
 
 
 
